--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,20 @@ header{
 font-family: sans-serif;
 height: 500px;
 background-position: center;
-}
-
-.responsive{
- max-width: 100%;
+max-width: 100%;
  height: 100px;
 }
 
-body {
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+body{
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-position: center;
+}
+
+.page-footer{
+background-color:turquoise;
+color: black;
+text-align: center;
+margin-top: 20px;
 }
   
