--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,5 @@
 .container {
-    background-color: rgba(148, 143, 162, 0.6);
-    
+    background-color: rgba(148, 143, 162, 0.6);  
 }
 
 h2 {
@@ -9,4 +8,10 @@ h2 {
 
 .btn {
     color: rgba(50, 103, 111, 0.8);
+}
+
+body {
+display: flex;
+min-height: 100vh;
+flex-direction: column;
 }
