--- a/assets/header-footer.css
+++ b/assets/header-footer.css
@@ -5,20 +5,17 @@ background-position: center;
 max-width: 100%;
  height: 100px;
 }
-
 body{
 background-repeat: no-repeat;
 background-attachment: fixed;
 background-position: center;
 }
-
 .page-footer{
 background-color:turquoise;
 color: black;
 text-align: center;
 margin-top: 20px;
 } */
-
 .site-width-limit {
     max-width: 900px;
     padding-left: 1.5rem;
@@ -26,19 +23,31 @@ margin-top: 20px;
     margin-left:auto;
     margin-right:auto;
 }
-
-.hero {
+header {
     min-height: 300px;
-    width: 100%;
     background-image: url("./hero-magic-card-ob.png");
     background-repeat: no-repeat;
-}
-
-.main-nav {
-    background-color: rgba(50, 103,111);
-}
-
-.main-header {
+    background-size: cover;
    
+}
+h1 {
+    text-align: center;
+    font-weight: bolder;
+    color: orangered;
+    font-style:unset;
+    font-family:sans-serif;
+    
+}
+.main-header {
     z-index: 100;
+}
+.page-footer {
+    background-color: black;
+    color: ivory;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    text-align: center;
 }
