--- a/assets/header-footer.css
+++ b/assets/header-footer.css
@@ -27,18 +27,29 @@ margin-top: 20px;
     margin-right:auto;
 }
 
-.hero {
+header {
     min-height: 300px;
-    width: 100%;
     background-image: url("./hero-magic-card-ob.png");
     background-repeat: no-repeat;
+    background-size: cover;
 }
-
-.main-nav {
-    background-color: rgba(50, 103,111);
+h1 {
+    text-align: center;
+    color: black;
+    font-weight: bolder;
 }
 
 .main-header {
-   
     z-index: 100;
+}
+
+.page-footer {
+    background-color: black;
+    color: ivory;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    text-align: center;
 }
